fix login and signup overlap

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -465,7 +465,7 @@ h6 {
   transition-duration: .3s;
 }
 
-.form-group .form-control:focus+label {
+.form-group .form-control:focus+label,.form-group .form-control+label.input-has-value {
   top: -20px;
   font-size: 9px;
   z-index: 200;
